--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 		  <div> 
 		   Este livro, A Lei do triunfo, foi tão impactante que fiz um resumo e me organizei para ler Todo início de semana. O livro apresenta um conjunto de 16 leis com base em 16 lições identificadas por Napoleon Hill num período de 10 anos. Neste período Hill entrevistou mais de 16.000 pessoas, dentre eles: Henry Ford, Cyrus H. K. Curtis, John D. Rockefeller, Georges S. Parker, Darwin P. Kingsley, Juiz Elbert H. Gray, E. A. Filene, John W. Davis, Edwin C. Barnes, E. M. Statler, Marshall Field, Elbert Hubbard, Charles P. Steinmetz, Wm. H. French, Frank Vanderlip, Cap. Georges M. Alexander, Thomas A. Edson, Georges W. Perkins, Charles M. Schwab, Dr. Alexander Graham Bell, Edward Bok, Harvey S. Firestone, Andrew Carnegie (incentivador e patrocinador da obra) entre outros. Sei você deve estar pensando ... tais leis não se aplicam nos tempos atuais!... é ai que você se engana. Atualmente existe nos Estados Unidos uma fundação chamada Napoleon Hill Foundation, que forma pessoas todos os anos baseada na filosofia de Hill. No Brasil temos o grupo Master Mind que já formou mais de 70 mil líderes. Ainda não fiz nenhuma formação Master Mind, mas certamente farei. Este é um dos primeiros livros do autor, construido a duras críticas.
 		  </div>
-		  <div class="zoom"><img src="./photos/lei.jpg" class="thumbnail" height="50" width="50"></div>
+		  <div class="zoom"><center><img src="./photos/lei.jpg" class="thumbnail" height="50" width="50"></center></div>
 		 </div>   
 	    </div>
 	    <div class="col-md-6 col-sm-6">
@@ -352,7 +352,7 @@
 		  <div> 
 		   Este livro, Empresas feitas para vencer, mostra a visão do empreendedor Norte Americano Jim Collins, sobre a necessidade de inovação constante e a importância dos relacionamentos e liderança dentro das empresas. Elaborei um resumo sobre o capítulo que fala de liderança. O autor destaca 5 níveis necessários para um lider de sucesso, em ordem de evolução. São eles: 1) Individuo altamente capacitado; 2) Membro colaborador da equipe; 3) Gerente competente; 4) Líder eficaz e 5) Executivo de nível. O autor tem reconhecimento pelos seu prestígio no mundo corporativo. Vale a pena a leitura, aprendizado garantido.
 		  </div>
-		  <div class="zoom"><img src="./photos/empresa.jpg" class="thumbnail" height="50" width="50"></div>
+		  <div class="zoom"><center><img src="./photos/empresa.jpg" class="thumbnail" height="50" width="50"></center></div>
 		 </div>   
 	    </div>
 	    <div class="col-md-6 col-sm-6">
@@ -363,7 +363,7 @@
 		  <div> 
 		   Este livro, O Poder do Hábito, mostra diversos exemplos de construção de hábitos, sempre incentivando a auto sugestão como fator fundamental para aquisição de bons hábitos. Seja na vida ou nos negócios como o proprio sub título indica, temos poder absoluto na transformação de hábitos, mas para isso é importante entende-los. O livro se propõe a explicar detalhadamente com base em exemplos, como os hábitos foram inseridos na sociedade e como são inseridos hoje no dia a dia de nossas vidas. Recomendo este livro para uma leitura imersiva, o livro requer uma atenção para melhor proveito da leitura. 
 	      </div>
-	      <div class="zoom"><img src="./photos/habito.jpg" class="thumbnail" height="50" width="50"></div>
+	      <div class="zoom"><center><img src="./photos/habito.jpg" class="thumbnail" height="50" width="50"></center></div>
 		 <div> 
 	    </div>
 	   </div>   
