--- a/pessoal/index.html
+++ b/pessoal/index.html
@@ -242,7 +242,7 @@
   <script>
   function vai(valor){
   			var semana = ["Domingo", "Segunda-Feira", "Terça-Feira", "Quarta-Feira", "Quinta-Feira", "Sexta-Feira", "Sábado"];
-			var raio = ["Azu", "Dourado", "Rosa", "Branco", "Verde", "Rubi-Dourado", "Violeta"];
+			var raio = ["Azul", "Dourado", "Rosa", "Branco", "Verde", "Rubi-Dourado", "Violeta"];
 			
 			var data = valor;
 			var arr = data.split("/").reverse();
@@ -258,7 +258,7 @@
   
 	  $(document).ready(function(){
 		var semana = ["Domingo", "Segunda-Feira", "Terça-Feira", "Quarta-Feira", "Quinta-Feira", "Sexta-Feira", "Sábado"];
-		var raio = ["Azu", "Dourado", "Rosa", "Branco", "Verde", "Rubi-Dourado", "Violeta"];
+		var raio = ["Azul", "Dourado", "Rosa", "Branco", "Verde", "Rubi-Dourado", "Violeta"];
 		$("input#dataR").blur(function(){
 			var data = this.value;
 			var arr = data.split("/").reverse();
