--- a/pessoal/index.html
+++ b/pessoal/index.html
@@ -43,14 +43,14 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">Quer saber que dia você nasceu?</a></h1>
+        <h1><a href="#intro" class="scrollto">Que dia foi?</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title=""></a> -->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Que dia?</a></li>
+          <li class="menu-active"><a href="#intro">Que dia foi?</a></li>
             <li><a href="../index.html" class="scrollto">Visite meu site</a></li>
             <li><a href="../empresas/index.html">Jim Collins</a></li>
           <!--li class="menu-has-children"><a href="">Drop Down</a>
@@ -201,7 +201,7 @@
         </div>
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
-            <a href="#intro" class="scrollto">Quer saber que dia você nasceu?</a>
+            <a href="#intro" class="scrollto">Que dia dia foi?</a>
             <a href="../index.html" class="scrollto">Visite meu site</a>
             <a href="../empresas/index.html">Jim Collins</a>
           </nav>
