--- a/pessoal/index.html
+++ b/pessoal/index.html
@@ -83,7 +83,8 @@
    <section id="intro">
 
     <div class="intro-text">
-      <h2>Digite a data de seu nascimento </h2><h3><input type="text" id="dataR"></h3>
+      <h2>Digite a data de seu nascimento </h2><input type="text" id="dataR">
+      <br>
       <button type="button" class="btn btn-success" onclick="vai(dataR.value)">Clique para saber que dia você nasceu.</button>
         
     </div>
