--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
 		   Este livro, Empresas feitas para vencer, mostra a visão do empreendedor Norte Americano Jim Collins, sobre a necessidade de inovação constante e a importância dos relacionamentos e liderança dentro das empresas. Elaborei um resumo sobre o capítulo que fala de liderança. O autor destaca 5 níveis necessários para um lider de sucesso, em ordem de evolução. São eles: 1) Individuo altamente capacitado; 2) Membro colaborador da equipe; 3) Gerente competente; 4) Líder eficaz e 5) Executivo de nível. O autor tem reconhecimento pelos seu prestígio no mundo corporativo. Vale a pena a leitura, aprendizado garantido.
 		  </div>
 		  <div class="zoom"><center><img src="./photos/empresa.jpg" class="thumbnail" height="50" width="50"></center></div>
-		 </div>   
+    		 <div class="zoom"><center><a href="https://atual.pro/empresas/">Mais livros deste autor</a></center></div>
+
+		 </div>  
+
 	    </div>
 	    <div class="col-md-6 col-sm-6">
          <div class="service-box text-center">
