--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="#livros"><strong>LI</strong>vros</a></li>
           <li><a href="#courses">cur<strong>SOS</strong></a></li>
           <li><a href="#faculity-member">Conheç@</a></li>
+          <li><a href="#work-shop">Eu uso</a></li>
           <li><a href="#contact"><strong>CONTA</strong>to</a></li>
           <li class="btn-trial"><a href="#ebook">Material gratuito</a></li>
         </ul>
@@ -245,67 +246,7 @@
     </div>
   </section-->
   <!--/ Cta-->
-  <!--work-shop-->
-  <!--section id="work-shop" class="section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="header-section text-center">
-          <h2>Próximos Workshops</h2>
-          <p>Confira os próximos Workshops.</p>
-          <hr class="bottom-line">
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="service-box text-center">
-            <div class="icon-box">
-              <i class="fas fa-file-alt color-green"></i>
-            </div>
-            <div class="icon-text">
-              <h4 class="ser-text">Atual LaTeX Workshop</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-12">
-          <div class="service-box text-center">
-            <div class="icon-box">
-              <i class="fa fa-file-excel-o color-green"></i>
-            </div>
-            <div class="icon-text">
-              <h4 class="ser-text">Atual Excel Workshop</h4>
-            </div>
-            Aguarde ...
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-12">
-          <div class="service-box text-center">
-            <div class="icon-box">
-              <i class="fab fa-java color-green"></i>
-            </div>
-            <div class="icon-text">
-              <h4 class="ser-text">Atual Java Workshop</h4>
-            </div>
-             Aguarde ...
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="service-box text-center">
-            <div class="icon-box">
-              <i class="fa fa-code color-green"></i>
-            </div>
-            <div class="icon-text">
-              <h4 class="ser-text">Atual Web Workshop</h4>
-            </div>
-             Aguarde ...
-          </div>
-        </div>
-        <div class="header-section text-center">
-        	<h2></h2>
-          <p>Os Workshops são eventos presenciais com a máxima interação, onde os alunos podem se conhecer, interagir e receber informação de alta qualidade ao vivo. Neste tipo de evento os participantes recebem uma variedade de material pronto para uso e indicações de fontes onde encontrar mais recursos. Geralmente estes encontros tem duração de 4 horas com coffe break. Brindes sempre estão presentes em nossos workshops, aproveite :) .</p>
-          <hr class="bottom-line">
-        </div>
-      </div>
-    </div>
-  </section-->
-  <!--/ work-shop-->
+  
   <!--Livros-->
   <section id="livros" class="section-padding">
   	 <div class="container">
@@ -678,6 +619,68 @@
     </div>
   </section>
   <!--/ Faculity member-->
+  
+  
+  <!--work-shop-->
+  <section id="work-shop" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="header-section text-center">
+          <h2>Aqui vou apresentar os equipamentos que já testei e aprovo.</h2>
+          <p>Confira ...</p>
+          <hr class="bottom-line">
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="service-box text-center">
+            <div class="icon-box">
+              <i class="fas fa-camera color-green"></i>
+            </div>
+            <div class="icon-text">
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07JVY1ZQM&asins=B07JVY1ZQM&linkId=646d279dc0ffad41d0f6820860f12470&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+            </div>
+          </div>
+        </div>
+        <!--div class="col-md-4 col-sm-6">
+          <div class="service-box text-center">
+            <div class="icon-box">
+              <i class="fa  fa-microchip" color-green"></i>
+            </div>
+            <div class="icon-text">
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07Q1358K1&asins=B07Q1358K1&linkId=8a6a2682d74f4cde1443a3fffbbba970&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+            </div>
+          </div>
+        </div-->
+        <!--div class="col-md-6 col-sm-12">
+          <div class="service-box text-center">
+            <div class="icon-box">
+              <i class="fab fa-java color-green"></i>
+            </div>
+            <div class="icon-text">
+              <h4 class="ser-text">Atual Java Workshop</h4>
+            </div>
+             Aguarde ...
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="service-box text-center">
+            <div class="icon-box">
+              <i class="fa fa-code color-green"></i>
+            </div>
+            <div class="icon-text">
+              <h4 class="ser-text">Atual Web Workshop</h4>
+            </div>
+             Aguarde ...
+          </div-->
+        </div>
+        <!--div class="header-section text-center">
+        	<h2></h2>
+          <p>Os Workshops são eventos presenciais com a máxima interação, onde os alunos podem se conhecer, interagir e receber informação de alta qualidade ao vivo. Neste tipo de evento os participantes recebem uma variedade de material pronto para uso e indicações de fontes onde encontrar mais recursos. Geralmente estes encontros tem duração de 4 horas com coffe break. Brindes sempre estão presentes em nossos workshops, aproveite :) .</p>
+          <hr class="bottom-line">
+        </div-->
+      </div>
+    </div>
+  </section>
+  <!--/ work-shop-->
   
    <!--Contact-->
   <section id="contact" class="section-padding">
