--- a/index.html
+++ b/index.html
@@ -581,9 +581,9 @@
             <br>
 			<a href="https://dx.doi.org/10.1007/978-3-030-12255-3_9" target='_blank'>Publicação sobre Cidades Inteligentes</a>
 			<!--br>
-			<a href="http://www.repositorio.jesuita.org.br/handle/UNISINOS/5281" target='_blank'>Dissertação do mestrado</a-->
+			<a href="https://www.repositorio.jesuita.org.br/handle/UNISINOS/5281" target='_blank'>Dissertação do mestrado</a-->
 			<br>
-			<a href="http://lattes.cnpq.br/9414932542121207" target='_blank'>Currículo Lattes</a>
+			<a href="https://lattes.cnpq.br/9414932542121207" target='_blank'>Currículo Lattes</a>
             </div>
           </div>
         </div>
@@ -647,7 +647,7 @@
               <i class="fas fa-sd-card color-green"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http:////ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07H42L4TJ&asins=B07H42L4TJ&linkId=d129ae0577a3f2cd90b64a9ea46f7c1f&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https:////ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07H42L4TJ&asins=B07H42L4TJ&linkId=d129ae0577a3f2cd90b64a9ea46f7c1f&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
             SD Card 64GB (p/câmera)
           </div>
@@ -658,7 +658,7 @@
               <i class="fas fa-plug color-gree"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07NDZ5BL2&asins=B07NDZ5BL2&linkId=98439ba4c6767ca1de76fcc9ebebffa5&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"> </iframe></h4>
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07NDZ5BL2&asins=B07NDZ5BL2&linkId=98439ba4c6767ca1de76fcc9ebebffa5&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"> </iframe></h4>
             </div>
            MicroFone (p/câmera)
           </div>
@@ -669,7 +669,7 @@
               <i class="fas fa-hdd color-green"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B0745CBCLK&asins=B0745CBCLK&linkId=4592b54f7ef16c4aad1605738b008982&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B0745CBCLK&asins=B0745CBCLK&linkId=4592b54f7ef16c4aad1605738b008982&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
             SSD 240GB (p PC)
           </div>
@@ -683,7 +683,7 @@
               <i class="fab fa-windows color-green"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"> <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07TWWVQNF&asins=B07TWWVQNF&linkId=a12540914a4d5e5d22184b4b1a4e92ed&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"> <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07TWWVQNF&asins=B07TWWVQNF&linkId=a12540914a4d5e5d22184b4b1a4e92ed&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
            Windows 10 Pro
           </div>
@@ -694,7 +694,7 @@
               <i class="fas fa-volume-up color-gree"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07HY9HJN9&asins=B07HY9HJN9&linkId=c8130c7f7229461b1edc5c2c8fa692db&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B07HY9HJN9&asins=B07HY9HJN9&linkId=c8130c7f7229461b1edc5c2c8fa692db&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
            Placa de Som
           </div>
@@ -705,7 +705,7 @@
               <i class="fas fa-plug color-gree"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"> <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B075QPBZBD&asins=B075QPBZBD&linkId=9b452471ee8ac20567e116ff54b8f8f2&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"> <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B075QPBZBD&asins=B075QPBZBD&linkId=9b452471ee8ac20567e116ff54b8f8f2&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
            Fonte 450W
           </div>
@@ -716,7 +716,7 @@
               <i class="fas fa-memory color-green"></i>
             </div>
             <div class="icon-text">
-              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B0711QH8ZS&asins=B0711QH8ZS&linkId=ad27658f01af4131c4f91e2af4d711dd&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
+              <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B0711QH8ZS&asins=B0711QH8ZS&linkId=ad27658f01af4131c4f91e2af4d711dd&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
             VGA RX 580 8GB
           </div>
