--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <link rel="stylesheet" href="css/styleanimate.css">
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
-  
-	
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fitvids/1.2.0/jquery.fitvids.min.js"></script>
 
 </head>
 
@@ -273,7 +272,7 @@
 		   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8546501467&asins=8546501467&linkId=1c01e2a521b94ddd3805c91aa7c044d2&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff"></iframe>	
 		  </div>
 		  <div> 
-		   Este livro, Pense e Enriqueça, foi o primeiro livro que encontrei do autor Napoleon Hill. No início, ele já informa que depende do leitor identificar o ponto exato do livro em que serão apresentadas as maneiras de pensar e enriquecer. O leitor pode encontrar as respostas nos primeiros capítulos, ao longo do livro ou ao final, mas o certo é que todos que estiverem preparados, vão encontrar. O livro foi escrito depois de: A Lei do triunfo, do mesmo autor. Em Pense e Enriqueça ao invés de 16 leis, são apresentados 13 passos ou princípios para enriquecer. Este livro é um pouco mais resumido, apesar do autor ter considerado um número ainda maior de entrevistados para sua construção. Trata-se de uma obra adotada em diversas formações e seu foco é manter o leitor motivado e livre de crenças limitantes. Até hoje os passos ensinados no livro são adotados em cursos de marketing digital. O livro tem diversas edições inclusive variações do título, tal como: Quem Pensa Enriquece, Pense e Fique Rico. Este livro é considerado fonte de auto ajuda e desenvolvimento pessoal. Ele está na lista dos 10 livros mais vendidos nos últimos 50 anos! 
+		   Este livro, Pense e Enriqueça, foi o primeiro livro que encontrei do autor Napoleon Hill. No início, ele já informa que depende do leitor identificar o ponto exato do livro em que serão apresentadas as maneiras de pensar e enriquecer. O leitor pode encontrar as respostas nos primeiros capítulos, ao longo do livro ou ao final, mas o certo é que todos que estiverem preparados, vão encontrar. O livro foi escrito depois de: A Lei do triunfo, do mesmo autor. Em Pense e Enriqueça ao invés de 16 leis, são apresentados 13 passos ou princípios para enriquecer. Este livro é um pouco mais resumido, apesar do autor ter considerado um número ainda maior de entrevistados para sua construção. Trata-se de uma obra adotada em diversas formações e seu foco é manter o leitor motivado. Até hoje os passos ensinados no livro são adotados em cursos de marketing digital. O livro tem diversas edições inclusive variações do título, tal como: Quem Pensa Enriquece, Pense e Fique Rico. Este livro é considerado fonte de auto ajuda e desenvolvimento pessoal. Ele está na lista dos 10 livros mais vendidos nos últimos 50 anos! Para quem não tem tempo de ler, recomendo procurar ele em áudio livro. Não é a mesma coisa apenas escutar o áudio, mas mesmo assim vai ser motivador e inspirador. Este livro também é uma excelente opção de presente, não importa a idade. A maioria dos leitores deste livro tem mais de 40 anos de idade, mas recomendo a todos.
 	      </div>
 		 <div> 
 	    </div>
@@ -297,7 +296,7 @@
     	 <div class="text-center quote">
   			<div class="collapse navbar-collapse text-center" id="myNavbar"><center>
         		<ul class="nav navbar-center">
-          			<li class="btn-trial"><a href="https://atual.pro/empresas/">Mais livros deste autor</a></li>
+          			<li class="btn-trial"><a href="./eletronicos/livros.html">Mais livros deste autor</a></li>
         		</ul>
         		</center>
       		</div>
@@ -310,7 +309,7 @@
 			<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8539004119&asins=8539004119&linkId=dd9f9d074e89488705395f51077a0bdd&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff"></iframe>
 			</div>
 		  <div> 
-		   Este livro, O Poder do Hábito, mostra diversos exemplos de construção de hábitos, sempre incentivando a auto sugestão como fator fundamental para aquisição de bons hábitos. Seja na vida ou nos negócios como o proprio sub título indica, temos poder absoluto na transformação de hábitos, mas para isso é importante entende-los. O livro se propõe a explicar detalhadamente com base em exemplos, como os hábitos foram inseridos na sociedade e como são inseridos hoje no dia a dia de nossas vidas. Recomendo este livro para uma leitura imersiva, o livro requer uma atenção para melhor proveito da leitura. 
+		   Este livro, O Poder do Hábito, mostra diversos exemplos de construção de hábitos, sempre incentivando a auto sugestão como fator fundamental para aquisição de bons hábitos. Seja na vida ou nos negócios como o proprio sub título indica, temos poder absoluto na transformação de hábitos, mas para isso é importante entende-los. O livro se propõe a explicar detalhadamente com base em exemplos, como os hábitos foram inseridos na sociedade e como são inseridos hoje no dia a dia de nossas vidas. Recomendo este livro para uma leitura imersiva, o livro requer uma atenção para melhor proveito da leitura. Eu fiz diversas pausas, pois a leitura é bem detalhada e as vezes cansa um pouco, então se prepare.
 	      </div>
 	      <div class="zoom"><center><img src="./photos/habito.jpg" class="thumbnail" height="50" width="50"></center></div>
 		 <div> 
@@ -370,7 +369,7 @@
   <div class="text-center quote">
   			<div class="collapse navbar-collapse text-center" id="myNavbar"><center>
         		<ul class="nav navbar-center">
-          			<li class="btn-trial"><a href="https://atual.pro/livros/">Mais livros ...</a></li>
+          			<li class="btn-trial"><a href="./eletronicos/livros.html">Mais livros ...</a></li>
         		</ul>
         		</center>
       		</div>
@@ -784,7 +783,11 @@
       <div class="row">
         <div class="header-section text-center">
           <h2>Quer editar suas fórmulas de química de um jeito simples?</h2>
-  			<iframe width="560" height="315" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <div class="conteudo">
+
+    		<iframe width="560" height="415" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allowfullscreen></iframe>
+
+  		  </div>	
   	    </div>
       </div>
     </div>
@@ -906,8 +909,12 @@
   </footer>
   <!--/ Footer-->
 
-
-
+<script>
+//$(document).ready(function(){
+    // Target your .container, .wrapper, .post, etc.
+//   $(".conteudo").fitVids();
+//});
+</script>
  
   
   <script src='js/jquery.min.js'></script>
