--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           <li><a href="#faculity-member">Conheç@</a></li>
           <li><a href="#work-shop">Eu uso</a></li>
           <li><a href="#contact"><strong>CONTA</strong>to</a></li>
+          <li><a href="https://linktr.ee/professormarcelo"><strong>Aulas</strong>to</a></li>
+          
           <li class="btn-trial"><a href="#ebook">Material gratuito</a></li>
         </ul>
       </div>
