--- a/eletronicos/rh.html
+++ b/eletronicos/rh.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Marcelo Telles</title>
+  <title>Sucesso no RH</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="dicas de livros" name="livros ótimos">
-  <meta content="dicas de livros" name="livros excelentes">
+  <meta content="dicas de livros para recursos humanos" name="livros ótimos para RH e DP">
+  <meta content="como obter sucesso no rh" name="livros excelentes para recrutamento e seleção">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
