--- a/eletronicos/rh.html
+++ b/eletronicos/rh.html
@@ -202,7 +202,7 @@
         </div>
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
-            <a href="#intro" class="scrollto">Eletrônicos</a>
+            <a href="#intro" class="scrollto">Livros</a>
             <a href="../index.html" class="scrollto">Visite meu site</a>
             <a href="../empresas/index.html">Jim Collins</a>
           </nav>
