--- a/index.html
+++ b/index.html
@@ -588,13 +588,24 @@
 			Sou professor, considero que sala de aula deve ser um ambiente dinâmico e favorável ao envolvimento do aluno.<br><br>
 			Em ambientes acadêmicos ou de desenvolvimento acredito que a equipe deve receber incentivo e feed back construtivos a fim de possibilitar crescimento e dedicação de todos.<br>
 			A possibilidade de motivar as pessoas realmente me desperta para a ação e crescimento sem limites.</p>
-            <br>
-			<a href="https://dx.doi.org/10.1007/978-3-030-12255-3_9" target='_blank'>Publicação sobre Cidades Inteligentes</a>
+            </div>
+           </div> 
+           <div class="col-md-4 col-sm-4"><center>
+				<a href="https://dx.doi.org/10.1007/978-3-030-12255-3_9" target='_blank'><img src="https://media.springernature.com/w306/springer-static/cover-hires/book/978-3-030-12255-3" width="100"><br>Publicação sobre Cidades Inteligentes</a></center>
+			</div>
+			
+			<div class="col-md-4 col-sm-4"><center>
+				<a href="http://www.repositorio.jesuita.org.br/bitstream/handle/UNISINOS/5281/Marcelo+Josu%E9+Telles_.pdf;jsessionid=BC3D4B97EC22B8E271964BB1E1A8D977?sequence=1" target='_blank'><img src="./img/rasp3.png" width="250"><br>Dissertação Mestrado</a></center>
+            </div>
+			
 			<!--br>
 			<a href="https://www.repositorio.jesuita.org.br/handle/UNISINOS/5281" target='_blank'>Dissertação do mestrado</a-->
-			<br>
-			<a href="https://lattes.cnpq.br/9414932542121207" target='_blank'>Currículo Lattes</a>
+        	<div class="col-md-4 col-sm-4"><center>
+				<a href="https://lattes.cnpq.br/9414932542121207" target='_blank'><img src="./img/lattes.jpeg" width="150"><br>Currículo Lattes</a></center>
             </div>
+            </div>
+           </div>
+
           </div>
         </div>
         <!--div class="col-lg-4 col-md-4 col-sm-4">
@@ -681,7 +692,7 @@
             <div class="icon-text">
               <h4 class="ser-text"><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=B0745CBCLK&asins=B0745CBCLK&linkId=4592b54f7ef16c4aad1605738b008982&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe></h4>
             </div>
-            SSD 240GB (p PC)
+            SSD 240GB (p/PC)
           </div>
         </div>
         
@@ -787,8 +798,7 @@
           <h2>Quer editar suas fórmulas de química de um jeito simples?</h2>
            <div class="conteudo">
 
-    		<iframe width="560" height="415" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allowfullscreen></iframe>
-
+    		<iframe width="280" height="207" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allowfullscreen></iframe>
   		  </div>	
   	    </div>
       </div>
