--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     	 <div class="text-center quote">
   			<div class="collapse navbar-collapse text-center" id="myNavbar"><center>
         		<ul class="nav navbar-center">
-          			<li class="btn-trial"><a href="./eletronicos/livros.html">Mais livros deste autor</a></li>
+          			<li class="btn-trial"><a href="./empresas/index.html">Mais livros deste autor</a></li>
         		</ul>
         		</center>
       		</div>
@@ -803,7 +803,7 @@
     <div class="container">
       <div class="row">
         <div class="header-section text-center">
-          <h2>Quer editar suas fórmulas de química de um jeito simples?</h2>
+          <h2>Quer editar suas fórmulas de química de um jeito simples? <ul class="nav navbar-center"><li  class="btn-trial"><a href="http://bit.ly/ebookquimica">Clique Aqui</a></li></ul></h2>
            <div class="conteudo">
 
     		<iframe width="280" height="207" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allowfullscreen></iframe>
@@ -813,7 +813,7 @@
     </div>
   </section>
   <!--/ Contact-->
-  
+
   
   <!--Contact-->
   <section id="contact" class="section-padding">
@@ -917,7 +917,7 @@
         <!-- Telegram Criar-->
         <!-- Periscope Criar-->
         <!-- Flipboard Criar-->
-        
+        <!--https://api.whatsapp.com/send?phone=5551991640596&text=Olá,%20Desejo%20simplificar%20meu%20transporte%20fretado.-->
       </ul>
       ©2019 Atual.PRO 
       <div class="credits">
