--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
         <li><a href="https://medium.com/@marcelotelles_18526" class="icoMedium" class="icoMedium"><i class="fab fa-medium fa-fw"></i></a></li>
         <li><a href="https://www.linkedin.com/in/marcelojtelles" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
         <li><a href="https://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
-        <li><a href="https://www.facebook.com/profile.php?id=100002941765270&ref=tn_tnmn" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
+        <li><a href="https://www.facebook.com/marcelojosuetelles" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
         <li><a href="https://twitter.com/#!/marcelojtelles" class="icoTwitter"><i class="fab fa-twitter fa-fw"></i></a></li>
 		<br><br>
