--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@
         <div class="row">
           <div class="banner-text text-center">
             <div class="text-border">
-              <h2 class="text-dec">Manter-se ATUALizado é PRO.</h2>
+            <img src="./img/logo-atualpro.png" width="50%">
+              <!--h2 class="text-dec">Manter-se ATUALizado é PRO.</h2-->
             </div>
             <div class="intro-para text-center quote">
               <p class="big-text">Aprendendo Hoje. . . Contribuindo Amanhã.</p>
               <p class="small-text"><br>Quer deixar seu trabalho mais atraente? Quer agregar valor em suas atividades? Quer mais qualidade e exclusividade em seu material didático e profissional?</p>
-              <a href="#work-shop" class="btn get-quote">Ver mais detalhes</a>
+              <a href="#contact" class="btn get-quote">Ver mais detalhes</a>
             </div>
             <a href="#feature" class="mouse-hover">
               <div class="mouse"></div>
@@ -889,7 +890,7 @@
         <div id="sendmessageebook"></div>
         <div id="errormessageebook"></div>
       </div>
-		<br><br><br><br>
+      <img src="./img/logo-atualpro.png">
       <h1>Solicite o Ebook gratuito</h1><br> <h3><font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
       <h5><span><font color="#COCOCO"></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h5>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" role="form" class="ebookForm">
@@ -927,6 +928,7 @@
         <li><a href="https://www.linkedin.com/in/marcelojtelles" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
         <li><a href="https://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
         <li><a href="https://www.facebook.com/marcelojosuetelles" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
+        <li><a href="https://www.instagram.com/marcelojtelles/" class="icoInstagram" ><i class="fab fa-instagram fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
         <li><a href="https://twitter.com/#!/marcelojtelles" class="icoTwitter"><i class="fab fa-twitter fa-fw"></i></a></li>
 		<br><br>
