--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<!-- https://www.flaticon.com/free-icon/calendar_833593#term=calendar&page=1&position=12 -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142100950-1"></script>
 <script>
@@ -196,10 +197,11 @@
     <div class="container">
       <div class="row">
         <div class="header-section text-center">
-          <h2>Quer editar suas fórmulas de química de um jeito simples? <ul class="nav navbar-center"><li  class="btn-trial"><a href="http://bit.ly/ebookquimica">Clique Aqui</a></li></ul></h2>
-           <div class="conteudo">
+          <h2>Quer editar suas fórmulas de química de um jeito simples? <ul class="nav navbar-center"><li  class="btn-trial"><a href="http://bit.ly/ebookquimica">Clique Aqui - para baixar o ebook.</a></li></ul></h2>
+           <a href="https://youtu.be/wu1NWt1cS70"><img src="./img/capa-formulas-quimica.png" width="30%"></a>
+           <!--div class="conteudo">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  		  </div>	
+  		  </div-->	
   	    </div>
       </div>
     </div>
@@ -943,7 +945,7 @@
       	<li><a href="https://stackoverflow.com/users/3722369/user3722369" class="icoStack"><i class="fab fa-stack-overflow fa-fw"></i></i></a></li>
         <li><a href="https://medium.com/@marcelotelles_18526" class="icoMedium" class="icoMedium"><i class="fab fa-medium fa-fw"></i></a></li>
         <li><a href="https://www.linkedin.com/in/marcelojtelles" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
-        <li><a href="https://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
+        <li><a href="https://www.youtube.com/c/marcelojtelles" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
         <li><a href="https://www.facebook.com/marcelojosuetelles" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
         <li><a href="https://www.instagram.com/marcelojtelles/" class="icoInstagram" ><i class="fab fa-instagram fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
