--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
         <div id="sendmessageebook"></div>
         <div id="errormessageebook"></div>
       </div>
-      <img src="./img/logo-atualpro.png">
+      <!--img src="./img/logo-atualpro.png"-->
       <h1>Solicite o Ebook gratuito</h1><br> <h3><font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
       <h5><span><font color="#COCOCO"></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h5>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" role="form" class="ebookForm">
