--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 			<!--br>
 			<a href="https://www.repositorio.jesuita.org.br/handle/UNISINOS/5281" target='_blank'>Dissertação do mestrado</a-->
         	<div class="col-md-3 col-sm-3"><center>
-				<a href="https://lattes.cnpq.br/9414932542121207" target='_blank'><img src="./img/lattes.jpeg" width="150"><br>Currículo Lattes</a></center>
+				<a href="http://lattes.cnpq.br/9414932542121207" target='_blank'><img src="./img/lattes.jpeg" width="150"><br>Currículo Lattes</a></center>
             </div>
             </div>
            </div>
