--- a/index.html
+++ b/index.html
@@ -441,12 +441,13 @@
       <div class="row">
       <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="./img/latex_texto.png" class="img-responsive">
+            <img src="./img/latex_textoPRONTO.png" class="img-responsive">
             <figcaption>
               <h3>Curso Atual Simplificando as fórmulas de Química</h3>
               <p>Neste curso vamos explorar o editor LaTeX, fazer sua instalação e criar as principais fórmulas de química, de um jeito simples.</p>
             </figcaption>
             <a href="https://go.hotmart.com/A14374190N"></a>
+            <!--http://www.30.mkitd3.com/vl/2-34b893e9bb1d0cdd-8cd07bd9f831c3-28ca856ele9K15e1UfHe601b3-4b-c-->
           </figure>
         </div>
         
