--- a/empresas/index.html
+++ b/empresas/index.html
@@ -367,7 +367,7 @@
               <h5><span>Incerteza, caos e acaso - por que algumas empresas prosperam apesar de tudo</span></h5>
               <img src="img/product-screen-3.png" width="180">
               <br><br>
-              <a href="https://amzn.to/2KoVmcd" class="get-started-btn">Quero este</a>
+              <a href="https://amzn.to/2TVCNBT" class="get-started-btn">Quero este</a>
             </div>
           </div> 
 
@@ -377,7 +377,7 @@
               <h5><span>e Por Que Algumas Empresas Jamais Desistem <br><br></span></h5>
               <img src="img/product-screen-2.png" width="180">
               <br><br>
-              <a href="https://amzn.to/2YD5R0F" class="get-started-btn">Quero este</a>
+              <a href="https://amzn.to/3gGd7mr" class="get-started-btn">Quero este</a>
             </div>
           </div>
 
@@ -387,7 +387,7 @@
               <h5><span>Por que algumas empresas alcançam a excelência... E outras não <br><br></span></h5>
 			  <img src="img/product-screen-1.png" width="180">
               <br><br>	
-              <a href="https://amzn.to/2KnVbOi" class="get-started-btn">Quero este</a>
+              <a href="https://amzn.to/36HOlOq" class="get-started-btn">Quero este</a>
             </div>
           </div>
 
@@ -406,7 +406,7 @@
             <p class="cta-text">Conheça as técnicas do professor e consultor Jim Collins, considerado uma das mentes contemporâneas mais brilhantes na área de gestão empresarial.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="https://amzn.to/2KnVbOi">Recomendado</a>
+            <a class="cta-btn align-middle" href="https://amzn.to/36HOlOq">Recomendado</a>
           </div>
         </div>
 
