--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <!--li><a href="#courses">Cursos</a></li-->
           <li><a href="#faculity-member">Conheça</a></li>
           <!--li><a href="#work-shop">Eu uso</a></li-->
-          <li><a href="#contact">Contato</a></li>
+          <!--li><a href="#contact">Contato</a></li-->
           <li><a href="https://linktr.ee/professormarcelo"><strong>Aulas</strong></a></li>
           
           <li class="btn-trial"><a href="#ebook">Material gratuito</a></li>
@@ -983,7 +983,7 @@
 
   
   <!--Contact-->
-  <section id="contact" class="section-padding">
+  <!--section id="contact" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="header-section text-center">
@@ -1004,10 +1004,10 @@
               <input type="email" class="form-control" name="email_" id="email" placeholder="Seu email" data-rule="email" data-msg="Por favor, informe um email válido" />
               <div class="validation"></div>
             </div>
-            <!--div class="form-group">
+            <div class="form-group">
               <input type="text" class="form-control" name="assunto_" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Por favor, preencha o mínimo de 8 letras no assunto" />
               <div class="validation"></div>
-            </div-->
+            </div>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 right">
             <div class="form-group">
@@ -1017,14 +1017,13 @@
           </div>
 
           <div class="col-xs-12">
-            <!-- Button -->
             <button type="submit" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar e-mail</button>
           </div>
         </form>
 
       </div>
     </div>
-  </section>
+  </section-->
   <!--/ Contact-->
   
 
