--- a/eletronicos/livros.html
+++ b/eletronicos/livros.html
@@ -173,8 +173,53 @@
     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8501044989&asins=8501044989&linkId=71a7a0557a56027446de31d5055d8a3a&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff">
     </iframe>
     
-    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8551002511&asins=8551002511&linkId=1340c4dcf582022c3134422069b542ad&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff">
-    </iframe>		
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=B07935JXPC&asins=B07935JXPC&linkId=190f08cb8a65e35f8b30ebb031e86300&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
+    </iframe>
+	<br>
+	
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="ja.html">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="lendo.html">
+    </iframe>
+	
     
     </div>
  <br>
