--- a/index.html
+++ b/index.html
@@ -759,8 +759,8 @@
 			</div>
 			
 			 <div class="col-md-2 col-sm-2"><center>
-				<a href="http://sbsi2016.ufsc.br/anais/Proceedings%20of%20the%20XII%20SBSI.pdf" target='_blank'><img src="./img/sbsi.jpeg" width="150"><br>Publicação sobre acessibilidade</a>
-				<a href="http://atual.pro/SBSIpress.pdf" target='_blank'><br>Apresentação</a></center>
+				<a href="https://sol.sbc.org.br/index.php/sbsi/article/view/5953/5851" target='_blank'><img src="./img/sbsi.jpeg" width="150"><br>Publicação sobre acessibilidade</a>
+				<a href="./SBSIpress.pdf" target='_blank'><br>Apresentação</a></center>
 			</div>
 			
 			<div class="col-md-2 col-sm-2"><center>
