--- a/eletronicos/livros.html
+++ b/eletronicos/livros.html
@@ -190,6 +190,9 @@
 	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=B00O7ZN5KQ&asins=B00O7ZN5KQ&linkId=3f827655d3e6767b546278ed1053ba0a&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
     </iframe>
 	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=8525432180&asins=8525432180&linkId=352fdbb635079b7d7365c4d80433a39a&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
+    </iframe>
+	
 	<br>
 	
 	
