--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
 			<div class="header-section text-center">
 			  <h4>Quer iniciar em programação e seguir uma carreira de sucesso?</h4><br>   
 			  <button type="button" onclick="window.open('https://www.youtube.com/playlist?list=PLZMlxfjaaZBL-fyjqXFZFm23O-LX6F0Ou');" class="btn btn-warning btn-lg">Play list Java!</button>
-			  <button type="button" onclick="window.open('');" class="btn btn-success btn-lg">Comprar na Udemy!</button></li></ul></h2>
+			  <button type="button" onclick="window.open('https://www.udemy.com/course/draft/3622598/?referralCode=FB18C92B767E1B567D62');" class="btn btn-success btn-lg">Comprar na Udemy!</button></li></ul></h2>
 			   <br><hr>
 			  
-			  <a href=""><img src="./img/cursojavabreve.jpg" width="100%"></a>	
+			  <a href="https://www.udemy.com/course/draft/3622598/?referralCode=FB18C92B767E1B567D62"><img src="./img/cursojava.jpg" width="100%"></a>	
 			</div>
 		</div>
       </div>
