--- a/eletronicos/livros.html
+++ b/eletronicos/livros.html
@@ -154,7 +154,7 @@
  
        <div class="section-header">
         <div class="header-section text-center">
-          <h2>Lista 2021, estes eu quero ler</h2>
+          <h2>Lista 2021, estes eu estou lendo</h2>
           <hr class="bottom-line">  
 	
 	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=855081024X&asins=855081024X&linkId=d2f75ab6c94323500421a7eaac2d4237&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff">
@@ -171,8 +171,7 @@
 	
 	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=8576840626&asins=8576840626&linkId=670105e24f8d8cdb5431eb4431946cac&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
     </iframe>
-	
-	
+
 	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8562409960&asins=8562409960&linkId=0fc6c0614ec3932d9434c8a33fbbec7f&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff">
     </iframe>
 	
